# LTS_Rutherford_Workflow_shared

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
notebooks/: setup.ipynb  workflow_explorer.ipynb  workflow_viz.py
scripts/analysis/: cablestack_slide_deck.py
scripts/analysis/submodel/cablestack/: analyse_pressure.py  analysis_utils.py  compare_cables.py  compare_gps_vs_planestrain.py  diagnostic_envelope_slope.py  plot_fd_good.py  presentation_loading_plots.py  presentation_plots.py  print_branch_slopes.py  probe_step_boundary.py  zoom_ls5_ls6_boundary.py
scripts/analysis/submodel/compbox/: Ic_B.csv  complete_analysis.py  convert_rmg_to_vtu.py  create_magnetic_heatmaps.py  ic_calculator.py  nb3sn_law.py  scaling_parameters.json
scripts/apdl/docker/: docker-compose.yaml  run_mapdl.sh
scripts/apdl/parentmodel/compbox/: BOX9.txt  CompBox_mag.inp  box6_loading.inp  box9_loading.inp
scripts/apdl/submodel/RVE/: README.md
scripts/apdl/submodel/cablestack/: 0-start-thermal.inp  0-start.inp  00-restart-pressure-radial.inp  00-restart-pressure.inp  00-restart-radial.inp  00-restart-transverse.inp  2-geo.inp  (+20 more)
scripts/d3plottoapdl_package/: _check_hex_overlay.py  conformalRutherfordMesh.py  contact_nodes.py  deformedStrandInterpolator.py  diag_circ_div_plot.py  diag_circ_div_sweep.py  diag_radial_layers.py  diagnose_mesh.py  hexagon.py  insulationlayer.py  meshMapping.py  plot_running_mesh.py  strandMeshGenerator.py
scripts/d3plottoapdl_package/3d_possibility/: findings.md  topology_diagnostic.py
scripts/docs/: _diagram_common.py  diagram_nodematching.py  diagram_overview.py  render_icons.py  slide_nodematching.py  slide_overview.py
scripts/lsdyna/docker/: docker-compose.yaml  file.sh
scripts/lsdyna/script/: belted_dummy copy.py  find_part_connections.py  lsdyna_mesh_reader.py  lsdyna_setup.py  mesh_to_lsdyna.py  primemesh.py
scripts/main/: build_plane_stress_run.py  cable_parameters_user.json  cablestack_stages.py  cache.py  calc_cable_params_sim.py  compbox_stage.py  hpc_submit.py  license_detector.py  main.py  solver.py
scripts/meshconverter/: 10_end.k  1_solversettings.k  2_part_materials.k  3_nodes.k  4_elements.k  5_coordinatesystem.k  6_contacts.k  7_contacts.k  8_motion.k  9_BC.k  inputfile_generator.py  mpptbin0000  part_des
scripts/paraview/: extract_coordinates_stack_sort.py
scripts/setup_step/: generate_rutherford.FCMacro  generate_step.py
tools/: MANIFEST.sha256  README.md  fetch_tools.ps1  fetch_tools.sh
(+13 files in other folders)
