[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lts-rutherford-workflow"
version = "0.1.0"
description = "End-to-end automated pipeline for Nb3Sn LTS Rutherford-cable simulation (FreeCAD -> Ansys Mechanical -> LS-DYNA -> ParaView -> MAPDL cablestack)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Joep van den Eijnden", email = "joep.van.den.eijnden@psi.ch" },
]
keywords = ["lts", "nb3sn", "rutherford", "superconductor", "ansys", "ls-dyna", "mapdl", "freecad", "paraview"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

# Python-orchestrator dependencies only.  The pipeline also requires several
# external tools that pip cannot install: a host ANSYS installation (Mechanical,
# MAPDL, LS-DYNA) with a reachable license server, Docker (for the meshing /
# LS-DYNA / MAPDL containers), and headless FreeCAD + ParaView (bundled under
# tools/ on Windows, installed via apt/brew/etc on Linux/macOS, or both
# available in the supplied Dockerfile).  See README.md for setup details.
dependencies = [
    "ansys-mechanical-core>=0.11",
    "ansys-dyna-core==0.9.0",
    "alphashape>=1.3",
    "matplotlib>=3.8",
    "networkx>=3.0",
    "numpy>=1.26,<3",
    "pandas>=2.0",
    "python-pptx>=1.0",
    "scipy>=1.11",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]
notebook = [
    "jupyterlab>=4.0",
    "ipywidgets>=8.1",
]

[project.scripts]
lts-cable = "main:main"

[project.urls]
Repository = "https://github.com/JoepVdE/LTS_Rutherford_Workflow_shared"

[tool.setuptools]
# The codebase is a script collection rather than a python package: every
# script lives under scripts/<area>/ and imports its siblings by name after
# sys.path manipulation.  We expose the main module as a console script via
# [project.scripts] above; no package is "installed" in the traditional sense.
package-dir = { "" = "scripts/main" }

[tool.setuptools.packages.find]
where = ["scripts/main"]
include = ["main*", "solver*", "license_detector*", "hpc_submit*", "calc_cable_params_sim*", "cache*"]
